--- a/A1/Makefile
+++ b/A1/Makefile
@@ -3,11 +3,15 @@ LIB := -L$(CUDA_HOME)/lib64 -lcudart
 
 NVCCFLAGS := -lineinfo -arch=sm_35 --ptxas-options=-v --use_fast_math
 
-all: julia
+all: julia blur
 
 julia: julia.cu Makefile
 	nvcc julia.cu -o julia $(INC) $(NVCCFLAGS) $(LIB)
 
 
+blur: blur.cu Makefile
+	nvcc blur.cu -o blur $(INC) $(NVCCFLAGS) $(LIB)
+
+
 clean:
-	rm -f julia.cu
+	rm -f julia blur
