--- a/tutorial1/Makefile
+++ b/tutorial1/Makefile
@@ -7,16 +7,16 @@ NVCCFLAGS	:= -lineinfo -arch=sm_35 --ptxas-options=-v --use_fast_math
 all:	prac1a prac1b prac1c
 
 prac1a:	prac1a.cu Makefile
-	nvcc prac1a.cu -o prac1a $(INC) $(NVCCFLAGS) $(LIB)
+	/usr/local/cuda-9.2/bin/nvcc prac1a.cu -o prac1a $(INC) $(NVCCFLAGS) $(LIB)
 
 prac1b:	prac1b.cu Makefile
-	nvcc prac1b.cu -o prac1b $(INC) $(NVCCFLAGS) $(LIB)
+	/usr/local/cuda-9.2/bin/nvcc prac1b.cu -o prac1b $(INC) $(NVCCFLAGS) $(LIB)
 
 prac1c:	prac1c.cu Makefile
-	nvcc prac1c.cu -o prac1c $(INC) $(NVCCFLAGS) $(LIB)
+	/usr/local/cuda-9.2/bin/nvcc prac1c.cu -o prac1c $(INC) $(NVCCFLAGS) $(LIB)
 
 prac1d:	prac1d.cu Makefile
-	nvcc prac1d.cu -o prac1d $(INC) $(NVCCFLAGS) $(LIB)
+	/usr/local/cuda-9.2/bin/nvcc prac1d.cu -o prac1d $(INC) $(NVCCFLAGS) $(LIB)
 
 clean:
 	rm -f prac1a prac1b prac1c prac1d
