--- a/tutorial5/Makefile
+++ b/tutorial5/Makefile
@@ -4,10 +4,10 @@ LIB	:= -L$(CUDA_HOME)/lib64 -lcudart
 
 NVCCFLAGS	:= -lineinfo -arch=sm_35 --ptxas-options=-v --use_fast_math
 
-all:	prac1a prac1b prac1c
+all:	prac2a
 
-prac2a:	prac1a.cu Makefile
-	/usr/local/cuda-9.2/bin/nvcc prac1a.cu -o prac1a $(INC) $(NVCCFLAGS) $(LIB)
+prac2a:	prac2a.cu Makefile
+	/usr/local/cuda-9.2/bin/nvcc prac2a.cu -o prac2a $(INC) $(NVCCFLAGS) $(LIB)
 
 clean:
-	rm -f prac1a
+	rm -f prac2a
